--- a/index.html
+++ b/index.html
@@ -9,12 +9,38 @@
       src="https://unpkg.com/ml5@0.1.1/dist/ml5.min.js"
       type="text/javascript"
     ></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script
+      type="text/javascript"
+      src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"
+    ></script>
+    <script src="sketch.js"></script>
+    <script src="captureSC.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
 
   <body>
-    <p id="status">Loading model...</p>
-    <!--   <script src="sketch.js"></script> -->
-    <script src="sketch.js"></script>
+    <div class="parentContainer">
+      <div class="leftDiv">
+        <div class="phppot-container">
+          <h1>POSEter</h1>
+          <h2>
+            Move your nose to make a typographic poster! Input your text. Select
+            your style. You have three seconds to place each character. Capture
+            your final poster to add it to our gallery :)
+          </h2>
+          <label for="inputValue">Enter a word:</label>
+          <input type="text" id="inputValue" placeholder="Type something" />
+          <button onclick="updateSketch()">Update Word</button>
+        </div>
+      </div>
+      <div class="rightDiv">
+        <div id="sketch-holder"></div>
+        <button id="capture-screenshot">Capture Screenshot</button>
+      </div>
+    </div>
+
+    <h3>🕺POSEter gallery 🕺</h3>
+    <div class="gallery"></div>
   </body>
 </html>
