--- a/index.html
+++ b/index.html
@@ -86,78 +86,19 @@
         <div id="sketch-holder"></div>
         <div class="row2">
           <button class="row2Button" id="capture-screenshot">capture</button>
-          <!-- <button class="row2Button" type="button" onclick="restartSketch()">
+          <button class="row2Button" type="button" onclick="refreshPage()">
             refresh
-          </button> -->
+          </button>
         </div>
       </div>
       <script src="sketch.js"></script>
     </div>
     <h3>🕺POSEter gallery 🕺</h3>
     <div class="gallery"></div>
+    <script>
+      function refreshPage() {
+        location.reload(true);
+      }
+    </script>
   </body>
 </html>
-
-<!-- <html>
-  <head>
-    <meta charset="UTF-8" />
-    <title>PoseNet example using p5.js</title>
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.0/p5.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.0/addons/p5.dom.min.js"></script>
-    <script
-      src="https://unpkg.com/ml5@0.1.1/dist/ml5.min.js"
-      type="text/javascript"
-    ></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script
-      type="text/javascript"
-      src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"
-    ></script>
-    <script src="sketch.js"></script>
-    <script src="captureSC.js"></script>
-    <script src="formSelect.js"></script>
-    <link rel="stylesheet" type="text/css" href="style.css" />
-  </head>
-
-  <body>
-    <div class="parentContainer">
-      <div class="leftDiv">
-        <div class="phppot-container">
-          <h1>POSEter</h1>
-          <h2>
-            Move your nose to make a typographic poster! Input your text. Select
-            your style. You have three seconds to place each character. Capture
-            your final poster to add it to our gallery :)
-          </h2>
-          <div class="inputCont">
-            <div class="row">
-              <label for="inputValue">Input text (max 10 characters)</label>
-            </div>
-            <div class="row">
-              <input type="text" id="inputValue" placeholder="HELLO" />
-              <button class="addButton" onclick="updateSketch()">apply</button>
-            </div>
-            <div class="row">
-              <label class="selectStyle">Select style</label>
-            </div>
-            <div class="row">
-              <button class="styleButton" id="style1"><p>A</p></button>
-              <button class="styleButton" id="style2"><p>A</p></button>
-              <button class="styleButton" id="style3">a</button>
-              <button class="styleButton" id="style4">A</button>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="rightDiv">
-        <div id="sketch-holder"></div>
-        <button id="capture-screenshot">Capture Screenshot</button>
-        <button id="restartSketch" onclick="restartSketch() ">Restart</button>
-      </div>
-    </div>
-
-    <h3>🕺POSEter gallery 🕺</h3>
-    <div class="gallery"></div>
-  </body>
-</html> -->
