--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <title>POSEter</title>
-    <link rel="icon" type="image/x-icon" href="/assets/Fav2.png" />
+    <link rel="icon" type="image/x-icon" href="./assets/Fav2.png" />
+    <meta property="og:title" content="POSEter" />
+    <meta property="og:image" content="./assets/socials.png" />
+    <meta property="og:description" content="ML Website Typography" />
+    <meta property="og:url" content="https://mjgomsa.github.io/POSEter-ML/" />
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.0/p5.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.0/addons/p5.dom.min.js"></script>
